@@ -25,6 +25,7 @@
 	update: SNMP support for Linksys SRW224G4 (#743)
 	update: files may be linked to rows (#733)
 	update: prevent deletion of system-level attributes (#761)
+	update: hide controls in cacti tab if user doesn't have permission (#707)
 	new feature: configurable top-to-bottom units order in particular racks (#601)
 	new feature: overridable tag names display style (via CSS and plug-ins)
 0.20.3 2012-12-19
